# clawnix

./: .gitignore  LICENSE  README.md  flake.nix  package-lock.json  package.json  tsconfig.json
docs/: SUMMARY.md
docs/plans/: 2026-02-15-nixclaw-phase2.md  2026-02-22-clawnix-design.md  2026-02-22-clawnix-phase3.md  2026-02-23-clawnix-phase4.md  2026-02-23-clawnix-phase5.md  2026-02-23-clawnix-phase6.md
examples/skills/: browser.md  delegation.md  evolve.md  exec.md  google.md  nixos.md  observe.md  scheduler.md
examples/workspaces/devops/: IDENTITY.md
examples/workspaces/personal/: BRIEFING.md  IDENTITY.md
examples/workspaces/researcher/: IDENTITY.md
examples/workspaces/support/: IDENTITY.md
mcp-servers/browser/: pyproject.toml  server.py  test_server.py
mcp-servers/calendar/: pyproject.toml  server.py  test_server.py
mcp-servers/documents/: pyproject.toml  server.py  test_server.py
mcp-servers/email/: pyproject.toml  server.py  test_server.py
mcp-servers/playwright/: server.py  test_server.py
nix/: gogcli.nix  mcp-browser.nix  mcp-calendar.nix  mcp-documents.nix  mcp-email.nix  mcp-playwright.nix  module.nix  server-example.nix
scripts/: clawnix-hook.sh  nixclaw-hook.sh
src/: index-multi.test.ts  index.ts  integration.test.ts
src/ai/: classifier.test.ts  classifier.ts  claude.test.ts  claude.ts  context-summarizer.test.ts  context.test.ts  context.ts
src/channels/telegram/: approval.test.ts  approval.ts  index.test.ts  index.ts
src/channels/terminal/: index.test.ts  index.ts
src/channels/webui/: index.test.ts  index.ts  routes.ts
src/core/: agent-broker.test.ts  agent-broker.ts  agent-instance.test.ts  agent-instance.ts  agent.test.ts  agent.ts  approval.test.ts  config.test.ts  config.ts  event-bus.test.ts  event-bus.ts  mcp-client.test.ts  mcp-client.ts  personality.test.ts  personality.ts  plugin-host.test.ts  plugin-host.ts  router.test.ts  router.ts  state.test.ts  state.ts  tool-policy.test.ts  types.ts  usage.test.ts  usage.ts
src/tools/browser/: index.test.ts  index.ts
src/tools/delegation/: index.test.ts  index.ts
src/tools/dev/: commands.ts  index.test.ts  (+1 more)
src/voice/: stt.ts
(+22 files in other folders)
