[project]
name = "clawnix-mcp-documents"
version = "0.1.0"
description = "ClawNix MCP server for document creation (PPTX, XLSX, PDF)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
clawnix-mcp-documents = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
